[package]
name = "retroblaze-emulator"
version = "0.1.0"
edition = "2021"
authors = ["RetroBlazeTeam"]
description = "Multi-system retro game emulator supporting NES, SNES, and Genesis with PlayStation controller support"
license = "MIT"

[dependencies]
# SDL2 for graphics, audio, and input
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

# GUI framework
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
image = "0.24"

# HTTP client for downloading ROMs
reqwest = { version = "0.11", features = ["blocking"] }

# Open files/folders in system viewer
open = "5.0"

# Controller input support (includes PS4 DualShock 4)
gilrs = "0.10"

# Serialization for save states and game library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Bitwise operations and utilities
bitflags = "2.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Emulator cores
nes-core = { path = "cores/nes" }
snes-core = { path = "cores/snes" }
genesis-core = { path = "cores/genesis" }

# Performance monitoring
criterion = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[workspace]
members = [
    "cores/nes",
    "cores/snes", 
    "cores/genesis",
]
